--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,9 +6,9 @@ name: Deploy
 # events but only for the master branch
 on:
   push:
-    branches: [ release, develop ]
+    branches: [ release ]
   pull_request:
-    branches: [ release, develop ]
+    branches: [ release ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -27,12 +27,13 @@ jobs:
           heroku_app_name: "peaceful-springs-31968"
           heroku_email: "ellaschwarzt@gmail.com"
           usedocker: true
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+      - run: npm ci
+      - run: npm test
+        env:
+          ENVIRONMENT: test
+          DATABASE: todoList
+          SECRET: secret
