--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,10 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+deploy:
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/release'
+
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
@@ -27,13 +31,3 @@ jobs:
           heroku_app_name: "peaceful-springs-31968"
           heroku_email: "ellaschwarzt@gmail.com"
           usedocker: true
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node-version }}
-      - run: npm ci
-      - run: npm test
-        env:
-          ENVIRONMENT: test
-          DATABASE: todoList
-          SECRET: secret
